--- a/fullscreen/css/style.css
+++ b/fullscreen/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8"; 
-/*---------------------- Обнуление start ----------------------*/
+/*---------------------- Обнуление -- start -- ----------------------*/
 * {
     padding: 0px 0px;
     margin: 0px 0px;
@@ -65,8 +65,10 @@ h1, h2, h3, h4, h5, h6 {
     font-size: inherit;
     font-weight: inherit;
 }
-/*---------------------- Обнуление end ----------------------*/
+/*---------------------- Обнуление --End-- ----------------------*/
 
+
+/*---------------------- Если откл. JavaScript --Start-- ----------------------*/
 noscript {
 	position: fixed;
 	top: 0px;
@@ -91,15 +93,11 @@ noscript {
 	background-color: rgba(0, 0, 0, 0.97);
 	z-index: 9999999999999999;
 }
+/*---------------------- Если откл. JavaScript --End-- ----------------------*/
 
 
-
-
-html,
 body {
-	min-height: 100%;
-	font-size: 16px;
-	background: #131419;
+	background: #000000;
 	color: #ffffff;
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
@@ -109,7 +107,7 @@ body {
 body._lock {
 	overflow-y: hidden;
 }
-
+	
 .preloader{
     position: fixed;
     top: 0;
@@ -149,9 +147,9 @@ body._lock {
 }
 
 .wrapper {
-	min-height: 100vh;
+	min-height: 100%;
 }
-/* --------------------  Шапка --Начало--  -------------------- */
+/* --------------------  Шапка --Start--  -------------------- */
 .header {
 	position: fixed;
 	top: 0px;
@@ -162,8 +160,7 @@ body._lock {
 }
 /* --------------------  Ограничивающий класс  -------------------- */
 .container {
-	max-width: 1104px;
-	padding: 0px 0px;
+	max-width: 1200px;
 	margin: 0px auto;
 }
 .header__body {
@@ -177,7 +174,7 @@ body._lock {
 	padding: 0px 30px;
 	min-height: 70px
 }
-/* -------  Logo --Начало--  ------- */
+/* -------  Logo --Start--  ------- */
 .header__logo {
 	border-radius: 50%;
 	position: relative;
@@ -230,13 +227,13 @@ body._lock {
 		transform: rotateY(360deg);
 	}
 }
-/* -------  Logo --Конец--  ------- */
+/* -------  Logo --End--  ------- */
 
 /* -------  Скрываем меню иконки бургера  ------- */
 .menu__icon {
 	display: none;
 }
-/* -------  Меню body --Начало--  ------- */
+/* -------  Меню body --Start--  ------- */
 .menu__list > li {
 	position: relative;
 	margin: 0px 0px 0px 20px;
@@ -250,9 +247,9 @@ body._lock {
 .menu__link:hover {
 	text-decoration: underline;
 }
-/* -------  Меню body --Конец--  ------- */
+/* -------  Меню body --End--  ------- */
 
-/* --------------------  Выпадающий меню --Начало--  -------------------- */
+/* --------------------  Выпадающий меню --Start--  -------------------- */
 .menu__sub_list {
 	position: absolute;
 	top: 100%;
@@ -262,9 +259,6 @@ body._lock {
 	padding: 15px;
 	z-index: 100;
 	text-align: center;
-	-webkit-transition: all .3s ease 0s;
-	-o-transition: all .3s ease 0s;
-		transition: all .3s ease 0s;
 }
 .menu__sub_list > li {
 	margin: 0px 0px 6px 0px;
@@ -293,12 +287,12 @@ body._lock {
 		-o-transition: transform .3s ease 0s;
 			transition: transform .3s ease 0s;
 }
-/* --------------------  Выпадающий меню --Конец--  -------------------- */
-/* --------------------  Шапка --Конец--  -------------------- *
+/* --------------------  Выпадающий меню --End--  -------------------- */
+/* --------------------  Шапка --End--  -------------------- *
 
 
 
-/* --------------------  PC for MOBILE --Начало--  -------------------- */
+/* --------------------  PC for MOBILE --Start--  -------------------- */
 body._pc .menu__list > li:hover .menu__sub_list {
 	opacity: 1;
 	visibility: visible;
@@ -323,56 +317,10 @@ body._mobile .menu__list > li {
 		-ms-flex-align: center;
 			align-items: center;
 }
-/* --------------------  PC for MOBILE --Конец--   -------------------- */
+/* --------------------  PC for MOBILE --End--   -------------------- */
 
 
-
-/* --------------------  Кнопка скрола на верх --Начало--   -------------------- */
-.up__button {
-	position: fixed;
-    bottom: 6%;
-    right: 12px;
-    opacity: 0;
-    visibility: hidden;
-    z-index: 111;
-    cursor: pointer;
-}
-.up__button.active {
-	opacity: 1;
-	visibility: visible;
-}
-
-.up__button_ico {
-	width: 44px;
-	height: 44px;
-	background: #dadada;
-	box-shadow: 0px 0px 2px 0px #b8b8b8,0px 0px 4px 0px #b8b8b8,0px 0px 6px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8;
-	transition: all 0.4s ease-in-out 0s;
-	position: relative;
-}
-.up__button_ico:hover {
-	box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
-}
-.icon__upbutton {
-	display: -webkit-box;
-		display: -ms-flexbox;
-			display: flex;
-	-webkit-box-pack: center;
-		-ms-flex-pack: center;
-			justify-content: center;
-	-webkit-box-align: center;
-		-ms-flex-align: center;
-			align-items: center;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	transform: rotate(180deg);
-	color: #000000;
-	font-size: 1.4em;
-	font-weight: bold;
-}
-/* --------------------  Кнопка скрола на верх --Конец--   -------------------- */
-
+/* -------------------- Default --End-- -------------------- */
 
 
 /* --------------------  Page --Начало--  -------------------- */
@@ -421,4 +369,52 @@ body._mobile .menu__list > li {
 .fullscreen__string_bg {
 	background:#000000 url(../img/bg.jpg) center / cover no-repeat fixed;
 }
-/* --------------------  Page --Конец--  -------------------- */
+/* --------------------  Page --End--  -------------------- */
+
+
+
+/* --------------------  Кнопка скрола на верх --Start--   -------------------- */
+.up__button {
+	position: fixed;
+    bottom: 6%;
+    right: 12px;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 111;
+    cursor: pointer;
+}
+.up__button.active {
+	opacity: 1;
+	visibility: visible;
+}
+
+.up__button_ico {
+	width: 44px;
+	height: 44px;
+	background: #dadada;
+	box-shadow: 0px 0px 2px 0px #b8b8b8,0px 0px 4px 0px #b8b8b8,0px 0px 6px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8;
+	transition: all 0.4s ease-in-out 0s;
+	position: relative;
+}
+.up__button_ico:hover {
+	box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
+}
+.icon__upbutton {
+	display: -webkit-box;
+		display: -ms-flexbox;
+			display: flex;
+	-webkit-box-pack: center;
+		-ms-flex-pack: center;
+			justify-content: center;
+	-webkit-box-align: center;
+		-ms-flex-align: center;
+			align-items: center;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	transform: rotate(180deg);
+	color: #000000;
+	font-size: 1.4em;
+	font-weight: bold;
+}
+/* --------------------  Кнопка скрола на верх --End--   -------------------- */
