--- a/menuFixed/css/style.css
+++ b/menuFixed/css/style.css
@@ -123,7 +123,8 @@ body._lock {
 
 /* ===================================  Header  --Start--  =================================== */
 .header {
-	position: relative;
+	padding-top: 4px;
+	position: fixed;
 	top: 0px;
 	left: 0px;
 	width: 100%;
@@ -160,7 +161,7 @@ body._pc .header__logo:hover {
 }
 body._mobile .header__logo:active {
 	-webkit-box-shadow: 0px 0px 5px #ff0000,0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 20px #ff0000;
-	  		 box-shadow: 0px 0px 5px #ff0000,0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 20px #ff0000;
+	   		box-shadow: 0px 0px 5px #ff0000,0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 20px #ff0000;
 }
 /* ====================  Logo Title  ==================== */
 .header__logo_title {
@@ -271,6 +272,7 @@ body._mobile .header__logo:active {
 	font-size: 0.8em;
 	font-weight: bold;
 	color: #ffffff;
+	user-select: none;
 }
 body._pc .menu__sub_link:hover {
 	text-decoration: underline;
@@ -329,22 +331,17 @@ body._mobile .menu__list > li {
 /* =============================================  Zeroing  --End--  ============================================= */
 
 
-
-/* =============================================  here Anim  ============================================= */
-
-/* =============================================  here Progress Bar  ============================================= */
-
-/* =============================================  here Responsive  ============================================= */
-
-
-
 /* =============================================  Page  --Start--  ============================================= */
+.page {
+	padding: 85px 0px 30px 0px;
+}
 .page__text {
 	padding: 8px;
 } 
 .page__content {
 	text-align: justify;
 }
+
 /* =============================================  Page  --End--  ============================================= */
 
 
