--- a/menuFixed/css/style.css
+++ b/menuFixed/css/style.css
@@ -141,7 +141,7 @@ body._lock {
 	-webkit-box-align: center;
 		-ms-flex-align: center;
 			align-items: center;
-	padding: 0px 30px;
+	padding: 0px 20px;
 	min-height: 70px
 }
 /* ===================================  Logo  --Start--  =================================== */
@@ -151,31 +151,6 @@ body._lock {
 	width: 44px;
 	height: 44px;
 	z-index: 100;
-	-webkit-box-shadow: 0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 12px #ff0000,0px 0px 26px #ff0000;
-	   		box-shadow: 0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 12px #ff0000,0px 0px 26px #ff0000;
-	cursor: pointer;
-}
-body._pc .header__logo:hover {
-	-webkit-box-shadow: 0px 0px 5px #ff0000,0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 20px #ff0000;
-	   		box-shadow: 0px 0px 5px #ff0000,0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 20px #ff0000;
-}
-body._mobile .header__logo:active {
-	-webkit-box-shadow: 0px 0px 5px #ff0000,0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 20px #ff0000;
-	   		box-shadow: 0px 0px 5px #ff0000,0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 20px #ff0000;
-}
-/* ====================  Logo Title  ==================== */
-.header__logo_title {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	height: 100%;
-	z-index: 100;
-	color: #ffffff;
-	font-size: 0.8em;
-	font-weight: bold;
-	user-select: none;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	display: -webkit-box;
 		display: -ms-flexbox;
 			display: flex;
@@ -185,8 +160,34 @@ body._mobile .header__logo:active {
 	-webkit-box-align: center;
 		-ms-flex-align: center;
 			align-items: center;
+	-webkit-box-shadow: 0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 12px #ff0000,0px 0px 26px #ff0000;
+	   		box-shadow: 0px 0px 7px #ff0000,0px 0px 9px #ff0000,0px 0px 12px #ff0000,0px 0px 26px #ff0000;
+	-webkit-transition: all 0.5s ease 0s;
+		-moz-transition: all 0.5s ease 0s;
+			-o-transition: all 0.5s ease 0s;
+				transition: all 0.5s ease 0s;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	cursor: pointer;
+}
+body._pc .header__logo:hover {
+	-webkit-box-shadow: 0px 0px 9px #ff0000,0px 0px 14px #ff0000,0px 0px 22px #ff0000,0px 0px 34px #ff0000;
+	   		box-shadow: 0px 0px 9px #ff0000,0px 0px 14px #ff0000,0px 0px 22px #ff0000,0px 0px 34px #ff0000;
+}
+body._mobile .header__logo:active {
+	-webkit-box-shadow: 0px 0px 9px #ff0000,0px 0px 14px #ff0000,0px 0px 22px #ff0000,0px 0px 34px #ff0000;
+	   		box-shadow: 0px 0px 9px #ff0000,0px 0px 14px #ff0000,0px 0px 22px #ff0000,0px 0px 34px #ff0000;
+}
+/* ====================  Logo Icon  ==================== */
+.header__logo_icon {
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+	color: #ffffff;
+	font-size: 0.8em;
+	font-weight: bold;
+	user-select: none;
 	-webkit-animation: animLogo 3s infinite;
-		animation: animLogo 6s infinite;
+			animation: animLogo 6s infinite;
 }
 @-webkit-keyframes animLogo {
 	0% {
@@ -230,10 +231,6 @@ body._mobile .header__logo:active {
 	color: #ffffff;
 	cursor: pointer;
 	user-select: none;
-	-webkit-transition: all 0.5s ease 0s;
-		-moz-transition: all 0.5s ease 0s;
-			-o-transition: all 0.5s ease 0s;
-				transition: all 0.5s ease 0s;
 }
 .menu__link:hover {
 	text-decoration: underline;
@@ -243,6 +240,11 @@ body._mobile .header__logo:active {
 .menu__list_sublist {
 	cursor: pointer;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+.menu__list_sublist._active .menu__arrow {
+	-webkit-transform: rotate(-180deg);
+		-ms-transform: rotate(-180deg);
+			transform: rotate(-180deg);
 }
 .menu__list_sublist-text {
 	width: 100%;
