--- a/menu/css/style.css
+++ b/menu/css/style.css
@@ -250,6 +250,14 @@ body._mobile .header__logo:active {
 	cursor: pointer;
 	user-select: none;
 }
+[data-goto] {
+	position: relative;
+	z-index: 1;
+}
+[data-goto] [data-type="trSpan"] {
+	position: relative;
+	z-index: -1;
+}
 .menu__link:hover {
 	text-decoration: underline;
 }
