--- a/menu/css/style.css
+++ b/menu/css/style.css
@@ -254,7 +254,7 @@ body._mobile .header__logo:active {
 	position: relative;
 	z-index: 1;
 }
-[data-goto] [data-type="trSpan"] {
+[data-goto] * {
 	position: relative;
 	z-index: -1;
 }
