--- a/menuFixed/css/style.css
+++ b/menuFixed/css/style.css
@@ -235,7 +235,7 @@ body._mobile .header__logo:active {
 	position: relative;
 	z-index: 1;
 }
-[data-goto] [data-type="trSpan"] {
+[data-goto] * {
 	position: relative;
 	z-index: -1;
 }
