--- a/menuFixed/fonts/icon-upbutton/style.css
+++ b/menuFixed/fonts/icon-upbutton/style.css
@@ -1,31 +1,30 @@
 @font-face {
-    font-family: 'icon';
-    src:  url('fonts/icon.eot?qlhqns');
-    src:  url('fonts/icon.eot?qlhqns#iefix') format('embedded-opentype'),
-    url('fonts/icon.ttf?qlhqns') format('truetype'),
-    url('fonts/icon.woff?qlhqns') format('woff'),
-    url('fonts/icon.svg?qlhqns#icon') format('svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
+  font-family: 'upload';
+  src:  url('fonts/upload.eot?ho4np5');
+  src:  url('fonts/upload.eot?ho4np5#iefix') format('embedded-opentype'),
+    url('fonts/upload.ttf?ho4np5') format('truetype'),
+    url('fonts/upload.woff?ho4np5') format('woff'),
+    url('fonts/upload.svg?ho4np5#upload') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
 }
-[class^="icon-"]::before, [class*=" icon-"]::before {
-	/* use !important to prevent issues with browser extensions that change fonts */
-	font-family: 'icon' !important;
-	speak: never;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'upload' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
-.icon-up-button:before {
-	content: "\ea32";
-	color: #000000;
-	font-size: 1.4em;
-	font-weight: bold;
-	transform: rotate(180deg);
+
+.icon-upload:before {
+  content: "\e900";
 }
