--- a/menu/css/media-style.css
+++ b/menu/css/media-style.css
@@ -146,14 +146,12 @@
 	}
 	.menu__list > li {
 		flex-wrap: wrap;
-		margin: 0px 0px 35px 0px;
-	}
-	.menu__list > li:last-child {
-		margin-bottom: 0px;
+		margin: 0px 0px 0px 0px;
 	}
 	.menu__link {
-		font-size: calc(22px + (28 - 22) * ((100vw - 320px) / (767 - 320)));
+		font-size: calc(26px + (32 - 26) * ((100vw - 320px) / (767 - 320)));
     	text-align: center;
+		margin: 20px 0px;
 	}
 	/* ====================  Menu body  --End--  ==================== */
 	
