--- a/menuFixed/css/media-style.css
+++ b/menuFixed/css/media-style.css
@@ -1,6 +1,5 @@
 /* ===================================  For PC  --Start--  =================================== */
 @media screen and (min-width: 767px) {
-
 	.menu__list {
 		display: -webkit-box;
 			display: -ms-flexbox;
@@ -64,7 +63,7 @@
 		width: 38px;
 		height: 22px;
 		cursor: pointer;
-		-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+		-webkit-tap-highlight-color: rgba(68 178 195 / 38%);
 	}
 	.menu__icon span,
 	.menu__icon::before,
@@ -139,6 +138,9 @@
 		padding: 0px 20%;
 		position: relative;
 		z-index: 1200;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
 	}
 	.menu__list li {
 		display: -webkit-box;
@@ -150,14 +152,15 @@
 	}
 	.menu__list > li {
 		flex-wrap: wrap;
-		margin: 0px 0px 35px 0px;
-	}
-	.menu__list > li:last-child {
-		margin-bottom: 0px;
+		margin: 0px 0px 0px 0px;
 	}
 	.menu__link {
-		font-size: calc(22px + (28 - 22) * ((100vw - 320px) / (767 - 320)));
+		font-size: calc(26px + (32 - 26) * ((100vw - 320px) / (767 - 320)));
     	text-align: center;
+		margin: 20px 0px;
+	}
+	.menu__link._activeLink {
+		text-decoration: none;
 	}
 	/* ====================  Menu body  --End--  ==================== */
 	
@@ -171,7 +174,7 @@
 	.menu__sub_list {
 		position: relative;
 		background-color: #ffffff;
-		margin: 15px 0px 0px 0px;
+		margin: 10px 0px 0px;
 		display: none;
 	}
 	.menu__list_sublist-text {
@@ -190,14 +193,19 @@
 	.menu__arrow {
 		margin: 0px 0px 0px 10px;
 	}
+	.menu__sub_list > li:nth-child(1) {
+		margin-top: 0px;
+	}
+	.menu__sub_list > li:last-child {
+		margin: 12px 16px 0px;
+	}
 	.menu__sub_list > li {
-		margin: 0px 0px 0px 0px;
+		margin: 12px 16px;
 	}
 	.menu__sub_link {
 		width: 100%;
-		padding: 4px 2px;
 		color: #000000;
-		font-size: calc(15px + (20 - 15) * ((100vw - 320px) / (767 - 320)));
+		font-size: calc(20px + (22 - 20) * ((100vw - 320px) / (767 - 320)));
 	}
 	/* ====================  Dropdown list  --End--  ==================== */
 	
@@ -220,6 +228,10 @@
 @media screen and (max-width: 360px){
 	.menu__list {
 		padding: 0px 2px;
+	}
+	.upload_icon {
+		width: 36px;
+		height: 36px;
 	}
 @supports (-webkit-appearance:none){}
 }
