--- a/menu/css/scroll_up_button.css
+++ b/menu/css/scroll_up_button.css
@@ -7,14 +7,14 @@
     visibility: hidden;
     z-index: 111;
     cursor: pointer;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+	-webkit-tap-highlight-color: rgba(68, 178, 195, 38%);
 }
 .up__button._active {
 	opacity: 1;
 	visibility: visible;
 }
 
-.up__button_ico {
+.up__button_icon {
 	width: 44px;
 	height: 44px;
 	background: #dadada;
@@ -26,15 +26,15 @@
 	position: relative;
 }
 /* ====================    ==================== */
-body._pc .up__button_ico:hover {
+body._pc .up__button_icon:hover {
 	-webkit-box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
 	        box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
 }
-body._mobile .up__button_ico:active {
+body._mobile .up__button_icon:active {
 	-webkit-box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
 	        box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
 }
-.icon__upbutton {
+.up__button_icon span {
 	display: -webkit-box;
 		display: -ms-flexbox;
 			display: flex;
