--- a/menu/css/style.css
+++ b/menu/css/style.css
@@ -265,7 +265,7 @@ body._mobile .header__logo:active {
 /* ===================================  Dropdown list  --Start--  =================================== */
 .menu__list_sublist {
 	cursor: pointer;
-	-webkit-tap-highlight-color: rgba(68 178 195 / 38%);
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .menu__list_sublist._active .menu__arrow {
 	-webkit-transform: rotate(-180deg);
@@ -288,7 +288,7 @@ body._mobile .header__logo:active {
 	z-index: 100;
 	border: solid 1px #303030;
 	text-align: center;
-	-webkit-tap-highlight-color: rgba(68 178 195 / 38%);
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .menu__sub_list > li {
 	margin: 0px 0px 6px 0px;
