--- a/menuFixed/css/media-style.css
+++ b/menuFixed/css/media-style.css
@@ -60,8 +60,8 @@
 		z-index: 5;
 		display: block;
 		position: relative;
-		width: 38px;
-		height: 22px;
+		width: 46px;
+		height: 28px;
 		cursor: pointer;
 		-webkit-tap-highlight-color: rgba(68, 178, 195, 38%);
 	}
@@ -229,9 +229,9 @@
 	.menu__list {
 		padding: 0px 2px;
 	}
-	.upload_icon {
-		width: 36px;
-		height: 36px;
+	.up__button_icon {
+		width: 46px;
+		height: 46px;
 	}
 @supports (-webkit-appearance:none){}
 }
