--- a/spoller/style.css
+++ b/spoller/style.css
@@ -9,9 +9,7 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
-:focus, :active {
-    outline: none;
-}
+
 a:focus, a:active {
     outline: none;
 }
@@ -26,9 +24,7 @@ html, body {
     font-size: 100%;
     line-height: 1;
     font-size: 14px;
-    -ms-text-size-adjust: 100%;
-    -moz-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
+    background-color: #2f2f2f;
 }
 
 input, button, textarea {
@@ -64,19 +60,37 @@ h1, h2, h3, h4, h5, h6 {
     font-size: inherit;
     font-weight: inherit;
 }
-/*---------------------- Обнуление --End-- ----------------------*/
-.spoller__item_title {
-    position: relative;
-    width: 100%;
+.wrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+}
+.container {
+    max-width: 850px;
+    width: 100%;
+    padding-top: 60px;
+}
+/*---------------------- Обнуление --End-- ----------------------*/
+.spoller__items {
+    margin: 0px 0px 30px 0px;
+}
+.spoller__item {
+    margin: 0px 0px 10px 0px;
+}
+.spoller__item_title {
+    padding: 15px;
+    width: 100%;
+    color: #ffffff;
+    font-size: 18px;
+    text-align: left;
+    background-color: transparent;
+    position: relative;
 }
 .spoller__items._init .spoller__item_title {
     cursor: pointer;
 }
 .spoller__items._init .spoller__item_title {
-    padding: 10px 40px 10px 10px;
+    padding: 15px 40px 15px 10px;
 }
 .spoller__items._init .spoller__item_title::before,
 .spoller__items._init .spoller__item_title::after {
@@ -93,26 +107,25 @@ h1, h2, h3, h4, h5, h6 {
    transform: rotate(-90deg);
 }
 .spoller__items._init .spoller__item_title._active::after {
-    transform: rotate(-90deg);
+    transform: rotate(0deg);
 }
 
-.spoller__item {
-    padding: 12px 6px;
-    margin: 12px 20px;
-    background: #76608b;
-    border-radius: 10px;
-}
 .spoller__item_title {
-    padding: 8px 0px;
     color: #ffffff;
     font-weight: 700;
     text-transform: uppercase;
     background: none;
 }
 .spoller__item_text {
+    padding: 0px 15px 10px;
+    color: #e7e7e7;
     line-height: 170%;
     font-weight: 700;
 }
+._items_1 .spoller__item {
+    background-color: #76608b;
+}
+
 ._items_2 .spoller__item {
     background-color: #785147;
 }
