--- a/menu/css/media-style.css
+++ b/menu/css/media-style.css
@@ -31,7 +31,7 @@
 		cursor: pointer;
 		display: block;
 	}
-	body._mobile.menu__list_sublist._active .menu__arrow {
+	body._mobile .menu__list_sublist._active .menu__arrow {
 		-webkit-transform: rotate(-180deg);
 			-ms-transform: rotate(-180deg);
 				transform: rotate(-180deg);
@@ -199,7 +199,13 @@
 	/* ===================================  Menu Burger  --End--  =================================== */
 	/* ===================================  Page  --Start--  =================================== */
 	/* ===================================  Page  --End--  =================================== */
-@supports (-webkit-appearance:none){}
+	/* ===================================  Scroll Up Button  --Start--  =================================== */
+	.up__button_icon {
+		width: 54px;
+		height: 54px;
+	}
+	/* ===================================  Scroll Up Button  --End--  =================================== */
+	@supports (-webkit-appearance:none){}
 }
 /* ===================================  Max-Width 767px  --End--  =================================== */
 @media screen and (max-width: 360px){
