--- a/menuFixed/css/media-style.css
+++ b/menuFixed/css/media-style.css
@@ -34,7 +34,7 @@
 		cursor: pointer;
 		display: block;
 	}
-	body._mobile.menu__list_sublist._active .menu__arrow {
+	body._mobile .menu__list_sublist._active .menu__arrow {
 		-webkit-transform: rotate(-180deg);
 			-ms-transform: rotate(-180deg);
 				transform: rotate(-180deg);
@@ -222,6 +222,12 @@
 	}
 	/* ====================  Page Section  --End--  ==================== */
 	/* ===================================  Page  --End--  =================================== */
+	/* ===================================  Scroll Up Button  --Start--  =================================== */
+	.up__button_icon {
+		width: 50px;
+		height: 50px;
+	}
+	/* ===================================  Scroll Up Button  --End--  =================================== */
 @supports (-webkit-appearance:none){}
 }
 /* ===================================  Max-Width 767px  --End--  =================================== */
