--- a/menuFixed/css/scroll_up_button.css
+++ b/menuFixed/css/scroll_up_button.css
@@ -25,11 +25,12 @@
 			transition: all 0.4s ease-in-out 0s;
 	position: relative;
 }
-/* ====================    ==================== */
+/* ====================  PC hover  ==================== */
 body._pc .up__button_icon:hover {
 	-webkit-box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
 	        box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
 }
+/* ====================  Mobile click  ==================== */
 body._mobile .up__button_icon:active {
 	-webkit-box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
 	        box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
