--- a/menuFixed/css/progressbar.css
+++ b/menuFixed/css/progressbar.css
@@ -1,4 +1,4 @@
-/* ===================================  Progress  --Start--  =================================== */
+/* ===================================  Progress Bar  --Start--  =================================== */
 .progress {
     position: fixed;
     top: 0;
@@ -35,4 +35,4 @@
     50%{background-position:100% 83%}
     100%{background-position:0% 18%}
 }
-/* ===================================  Progress  --End--  =================================== */
+/* ===================================  Progress Bar  --End--  =================================== */
