--- a/menu/css/preloader.css
+++ b/menu/css/preloader.css
@@ -10,7 +10,7 @@
     opacity: 1;
     visibility: visible;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-	transition: all .7s ease 0s;
+	transition: all 0.7s ease 0s;
 }
 /* ====================  Preloader shell Disappears when _show Class is Added  ==================== */
 .preloader._show{
