--- a/menuFixed/css/ibg.css
+++ b/menuFixed/css/ibg.css
@@ -14,4 +14,18 @@
 	opacity: 0;
 	visibility: hidden;
 }
+/* .hi {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	background-position: center;
+}
+.hi__ibg {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+} */
 /* ===================================  IBG  --End--  =================================== */
