--- a/menuFixed/css/style.css
+++ b/menuFixed/css/style.css
@@ -1,8 +1,8 @@
 /* =============================================  My Code  --Start--  ============================================= */
 body {
 	background-color: #181818;
-	color: #ffffff;
 	overflow-x: hidden;
+	overflow-y: auto;
 }
 /* ====================  Body Lock  ==================== */
 body._lock {
