--- a/menuFixed/css/zeroing.css
+++ b/menuFixed/css/zeroing.css
@@ -14,8 +14,9 @@ nav, footer, header, aside {
 html, body {
     height: 100%;
     width: 100%;
-    line-height: 1;
+	color: #ffffff;
     font-size: 16px;
+    line-height: 1;
 	-webkit-text-size-adjust: 100%;
 		-moz-text-size-adjust: 100%;
 	 		-ms-text-size-adjust: 100%;
