--- a/menu/scss/style.scss
+++ b/menu/scss/style.scss
@@ -1,3 +1,4 @@
+@import "_zeroing";
 /* =============================================  My Code  --Start--  ============================================= */
 body {
 	background-color: #181818;
@@ -8,12 +9,14 @@ body {
 body._lock {
 	overflow-y: hidden;
 }
-/* =============================================  here PRELOADER  ============================================= */
-/* ====================  Bounding Сontainer  ==================== */
+@import "_preloader";/* =============================================  here Preloader  ============================================= */
+/* ====================  Bounding Сontainer  --Start--  ==================== */
 .container {
 	max-width: 1200px;
 	margin: 0px auto;
 }
+/* ====================  Bounding Сontainer  --Start--  ==================== */
+@import "_ibg";/* =============================================  here Ibg  ============================================= */
 /* ===================================  Header  --Start--  =================================== */
 .header {
 	position: relative;
@@ -166,8 +169,7 @@ body._mobile .menu__list > li {
 /* ====================  PC for MOBILE  --End--  ==================== */
 /* ===================================  Menu body  --End--  =================================== */
 /* ===================================  Header  --End--  =================================== */
-/* =============================================  here Anim  ============================================= */
-/* =============================================  here Progress Bar  ============================================= */
+@import "_rogressbar";/* =============================================  here Progress Bar  ============================================= */
 /* =============================================  Page  --Start--  ============================================= */
 .page__text {
 	padding: 8px;
@@ -176,5 +178,5 @@ body._mobile .menu__list > li {
 	text-align: justify;
 }
 /* =============================================  Page  --End--  ============================================= */
-/* =============================================  here Scroll Up Button  ============================================= */
+@import "_scroll_up_button";/* =============================================  here Scroll Up Button  ============================================= */
 /* =============================================  My Code  --Start--  ============================================= */
