--- a/menu/scss/_preloader.scss
+++ b/menu/scss/_preloader.scss
@@ -11,11 +11,11 @@
     visibility: visible;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	transition: all 0.7s ease 0s;
-}
-/* ====================  Preloader shell Disappears when _show Class is Added  ==================== */
-.preloader._show{
-    opacity: 0;
-    visibility: hidden;
+	/* ====================  Preloader shell Disappears when _show Class is Added  ==================== */
+	&._show{
+		opacity: 0;
+		visibility: hidden;
+	}
 }
 /* ====================  Centering  ==================== */
 .preloader__content{
@@ -33,28 +33,30 @@
 	justify-content: center;
 	width: 70px;
 	height: 70px;
-}
-.preloader__downloads_icon {
+	&_icon {
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	border-radius: 50%;
 	animation: 1s linear infinite;
 }
-.preloader__icon_first {
-	border-bottom: solid 1px #ff7473;       
-	transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
-	animation-name: preloaderDownloadIconFirst;
 }
-.preloader__icon_second {
-	border-right: solid 1px #ffc952;
-   	transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
-	animation-name: preloaderDownloadIconSecond;
-}
-.preloader__icon_third {
-	border-top: solid 1px #47b8e0;
-	transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
-	animation-name: preloaderDownloadIconThird;
+.preloader__icon {
+	&_first {
+		border-bottom: solid 1px #ff7473;       
+		transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+		animation-name: preloaderDownloadIconFirst;
+	}
+	&_second {
+		border-right: solid 1px #ffc952;
+		   transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+		animation-name: preloaderDownloadIconSecond;
+	}
+	&_third {
+		border-top: solid 1px #47b8e0;
+		transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+		animation-name: preloaderDownloadIconThird;
+	}
 }
 .preloader._show .preloader__downloads_icon {
     animation: none;
