--- a/menu/scss/_scroll_up_button.scss
+++ b/menu/scss/_scroll_up_button.scss
@@ -7,11 +7,11 @@
     visibility: hidden;
     z-index: 80;
     cursor: pointer;
-	-webkit-tap-highlight-color: rgba(68, 178, 195, 38%);
-}
-.up__button._active {
-	opacity: 1;
-	visibility: visible;
+	-webkit-tap-highlight-color: rgba(68, 178, 195, 0.3);
+	&._active {
+		opacity: 1;
+		visibility: visible;
+	}
 }
 .up__button_icon {
 	width: 54px;
