--- a/menu/scss/_zeroing.scss
+++ b/menu/scss/_zeroing.scss
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* =============================================  Zeroing  --Start--  ============================================= */
 * {
     padding: 0px 0px;
@@ -17,10 +16,7 @@ html, body {
 	color: #ffffff;
     font-size: 16px;
     line-height: 1;
-	-webkit-text-size-adjust: 100%;
-		-moz-text-size-adjust: 100%;
-	 		-ms-text-size-adjust: 100%;
-				text-size-adjust: 100%;
+	text-size-adjust: 100%;
 }
 input, button, textarea {
     font-family: inherit;
@@ -40,7 +36,7 @@ a, a:visited {
   	text-decoration: none;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-a:hover {
+a:hover,a:active {
   	text-decoration: none;
 }
 ul li {
@@ -73,9 +69,9 @@ noscript {
 	font-size: 1em;
 	font-weight: 700;
 	line-height: 160%;
-}
-.noscript__text a {
-	color: #33ff00;
+	a {
+		color: #33ff00;
+	}
 }
 /* ====================  If JavaScript is disabled  --End--  ==================== */
 /* =============================================  Zeroing  --End--  ============================================= */
