--- a/menu/scss/_media-header.scss
+++ b/menu/scss/_media-header.scss
@@ -59,15 +59,19 @@
 	transition: right 0.5s ease 0s;
 	background-color: rgba(0, 0, 0, 0.95);
 	overflow-y: auto;
-	&._active::before {
+	&::before {
 		content: "";
 		position: fixed;
 		top: 0px;
-		left: 0px;
+		right: -100%;
 		width: 100%;
 		height: 70px;
 		background-color: #000000;
 		z-index: 10000;
+		transition: right 0.5s ease 0s;
+	}
+	&._active::before {
+		right: 0%;
 	}
 	&._active {
 		right: 0px;
