--- a/menu/scss/include/_header.scss
+++ b/menu/scss/include/_header.scss
@@ -14,7 +14,7 @@
 	padding: 0px 20px;
 	min-height: 70px
 }
-@import "_header__logo";/* ====================  here Logo  ==================== */
+@import "_header__logo";// ====================  here Logo  ==================== //
 /* ===================================  Menu body  --Start--  =================================== */
 /* ====================  Hide burger icon menu for PC  ==================== */
 .menu__icon {
@@ -24,6 +24,13 @@
 .menu__list > li {
 	position: relative;
 	margin: 0px 0px 0px 20px;
+	body._mobile & {
+		flex: 1 1 auto;
+	}
+	body._mobile & {
+		display: flex;
+		align-items: center;
+	}
 }
 .menu__link {
 	padding: 10px 0px;
@@ -34,18 +41,10 @@
 	cursor: pointer;
 	user-select: none;
 	-webkit-tap-highlight-color: rgba(68, 178, 195, 0.3);
+	body._pc &:hover {
+		text-decoration: underline;
+	}
 }
-body._pc .menu__link:hover {
-	text-decoration: underline;
-}
-@import "_dropdown__list";/* ====================  here Dropdown list  ==================== */
-body._mobile .menu__list > li {
-    flex: 1 1 auto;
-}
-body._mobile .menu__list > li {
-	display: flex;
-	align-items: center;
-}
-/* ====================  PC for MOBILE  --End--  ==================== */
+@import "_dropdown__list";// ====================  here Dropdown list  ==================== //
 /* ===================================  Menu body  --End--  =================================== */
 /* ===================================  Header  --End--  =================================== */
