--- a/menuFixed/scss/include/_scroll_up_button.scss
+++ b/menuFixed/scss/include/_scroll_up_button.scss
@@ -20,20 +20,20 @@
     box-shadow: 0px 0px 2px 0px #b8b8b8,0px 0px 4px 0px #b8b8b8,0px 0px 6px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8;
 	transition: all 0.4s ease-in-out 0s;
 	position: relative;
-}
-body._pc .up__button_icon:hover {
-    box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
-}
-body._mobile .up__button_icon:active {
-    box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
-}
-.up__button_icon span {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-    transform: rotate(180deg);
+	body._pc &:hover {
+		box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
+	}
+	body._mobile &:active {
+		box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
+	}
+	& span {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		transform: rotate(180deg);
+	}
 }
 /* =============================================  Scroll Up Button  --End--  ============================================= */
