--- a/menuFixed/scss/include/_zeroing.scss
+++ b/menuFixed/scss/include/_zeroing.scss
@@ -1,12 +1,18 @@
 @charset "UTF-8";
 /* =============================================  Zeroing  --Start--  ============================================= */
 * {
-    padding: 0px 0px;
-    margin: 0px 0px;
+    padding: 0;
+    margin: 0;
     border: 0;
 }
 *, *::before, *::after {
     box-sizing: border-box;
+}
+:focus,:active{
+	outline: none;
+}
+a:focus,a:active{
+	outline: none;
 }
 nav, footer, header, aside {
     display: block;
@@ -14,13 +20,9 @@ nav, footer, header, aside {
 html, body {
     height: 100%;
     width: 100%;
-	color: #ffffff;
     font-size: 16px;
     line-height: 1;
-	-webkit-text-size-adjust: 100%;
-		-moz-text-size-adjust: 100%;
-	 		-ms-text-size-adjust: 100%;
-				text-size-adjust: 100%;
+	text-size-adjust: 100%;
 }
 input, button, textarea {
     font-family: inherit;
@@ -28,27 +30,20 @@ input, button, textarea {
 input::-ms-clear {
     display: none;
 }
-button {
-    cursor: pointer;
+button{
+	cursor: pointer;
+	&::-moz-focus-inner{
+		padding:0;
+		border:0;
+	}
 }
-button::-moz-focus-inner {
-    padding: 0px 0px;
-    border: 0;
-}
-a, a:visited {
-	color: #ffffff;
-  	text-decoration: none;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-a:hover {
+a, a:visited, a:hover {
   	text-decoration: none;
 }
 ul li {
     list-style: none;
 }
 img {
-	width: 100%;
-	height: 100%;
     vertical-align: top;
 }
 h1, h2, h3, h4, h5, h6 {
