--- a/menu/scss/include/_scroll_up_button.scss
+++ b/menu/scss/include/_scroll_up_button.scss
@@ -6,20 +6,23 @@
     opacity: 0;
     visibility: hidden;
     z-index: 80;
+	pointer-events: all;
     cursor: pointer;
 	-webkit-tap-highlight-color: rgba(68, 178, 195, 0.3);
+	transition: all 0.4s ease 0s;
 	&._active {
 		opacity: 1;
 		visibility: visible;
 	}
 }
 .up__button_icon {
+	position: relative;
 	width: 54px;
 	height: 54px;
 	background: #dadada;
     box-shadow: 0px 0px 2px 0px #b8b8b8,0px 0px 4px 0px #b8b8b8,0px 0px 6px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8;
+	pointer-events: all;
 	transition: all 0.4s ease-in-out 0s;
-	position: relative;
 	body._pc &:hover {
 		box-shadow: 0px 0px 5px 0px #b8b8b8,0px 0px 7px 0px #b8b8b8,0px 0px 10px 0px #b8b8b8,0px 0px 13px 0px #b8b8b8;
 	}
