--- a/menuFixed/scss/include/style.scss
+++ b/menuFixed/scss/include/style.scss
@@ -5,6 +5,7 @@
 @import "_wrapper";// ====================  here Wrapper  ==================== //
 @import "_container";// ====================  here Container  ==================== //
 @import "_ibg";// ====================  here Ibg  ==================== //
+@import "../_var";// ====================  here Var  ==================== //
 @import "_header";// ====================  here Header  ==================== //
 @import "_progressbar";// ====================  here Progressbar  ==================== //
 @import "../_page";// ====================  here Page  ==================== //
